[tool.poetry]
name = "self-rag"
version = "0.1.0"
description = "Self-RAG (Self-Reflective Retrieval-Augmented Generation) is a framework designed to improve the quality and factual accuracy of large language models (LLMs). Unlike traditional RAG methods that simply retrieve and use documents, Self-RAG enhances LLMs by adding a self-reflection mechanism. This approach allows the model to generate responses and then review and refine those responses based on the retrieved information. Self-RAG uses reflection tokens to guide the model in checking its own outputs for acc"
authors = ["SchneiderSix <104461916+SchneiderSix@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pymongo = "^4.8.0"
python-dotenv = "^1.0.1"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
pypdf = "^4.3.1"
langchain-openai = "^0.1.19"
langchain-unstructured = "^0.1.1"
unstructured = {extras = ["pdf"], version = "^0.15.1"}
python-magic = "^0.4.27"
python-magic-bin = "^0.4.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
